Fixed crashing when resistance hits not found

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 
 *.pyc
+Krill/db/formate_releasing_enzymes_HMMs/arylformamidase_G1.hmm
+Krill/db/formate_releasing_enzymes_HMMs/arylformamidase_G2.hmm
+Krill/db/formate_releasing_enzymes_HMMs/arylformamidase_G3.hmm
+Krill/db/formate_releasing_enzymes_HMMs/arylformamidase_G4.hmm
+Krill/db/formate_releasing_enzymes_HMMs/hydethylphosDioxyg.hmm
+Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G1_quinolobactin.hmm
+Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G2.hmm
+Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G3.hmm
+Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G4.hmm
+Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G5.hmm
+Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G6_Str.hmm
+Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G7_Str2.hmm
