Added function to save results as xlsx

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G4.hmm
 Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G5.hmm
 Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G6_Str.hmm
 Krill/db/formate_releasing_enzymes_HMMs/tryptDioxyg_G7_Str2.hmm
+Krill/db/formate_releasing_enzymes_HMMs/arylformamidase_new.hmm
+Krill/db/formate_releasing_enzymes_HMMs/hydroethylphosphonate_dioxygenase_new.hmm
+Krill/db/formate_releasing_enzymes_HMMs/tryptophanDioxygen_blast_new.hmm
+Krill/db/novos_hmm/arylformamidase_new.hmm
+Krill/db/novos_hmm/hydroethylphosphonate_dioxygenase_new.hmm
+Krill/db/novos_hmm/tryptophanDioxygen_blast_new.hmm
+Krill/db/tryptophanDioxygen_blast.hmm
